--- a/src/Chat.css
+++ b/src/Chat.css
@@ -37,6 +37,7 @@
 
 .chat__messages {
   flex: 1;
+  overflow: scroll;
 }
 
 .chat__input > form > input {
@@ -49,4 +50,15 @@
 
 .chat__input > form > button {
   display: none;
+}
+
+/* Hide scrollbar for Chrome, safari and Opera */
+.chat__messages::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, edge and Firefox */
+.chat__messages {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
